# Lightstreamer-lib-client-c-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ConsoleLogLevel.hpp  ConsoleLoggerProvider.hpp  Logger.hpp  Proxy.hpp
include/lightstreamer/client/: ClientListener.hpp  ClientMessageListener.hpp  ConnectionDetails.hpp  ConnectionOptions.hpp  Constants.hpp  Internals.hpp  ItemUpdate.hpp  LightstreamerClient.hpp  LightstreamerEngine.hpp  MessageManager.hpp  Proxy.hpp  Subscription.hpp  SubscriptionListener.hpp  SubscriptionManager.hpp
include/lightstreamer/client/events/: ClientListenerEndEvent.hpp  ClientListenerPropertyChangeEvent.hpp  ClientListenerServerErrorEvent.hpp  ClientListenerStartEvent.hpp  ClientListenerStatusChangeEvent.hpp  ClientMessageAbortEvent.hpp  ClientMessageDenyEvent.hpp  ClientMessageDiscardedEvent.hpp  ClientMessageErrorEvent.hpp  ClientMessageProcessedEvent.hpp  Event.hpp  EventDispatcher.hpp  EventsThread.hpp  SubscriptionListenerClearSnapshotEvent.hpp  SubscriptionListenerCommandSecondLevelItemLostUpdatesEvent.hpp  SubscriptionListenerCommandSecondLevelSubscriptionErrorEvent.hpp  SubscriptionListenerConfigurationEvent.hpp  SubscriptionListenerEndEvent.hpp  SubscriptionListenerEndOfSnapshotEvent.hpp  SubscriptionListenerItemLostUpdatesEvent.hpp  SubscriptionListenerItemUpdateEvent.hpp  SubscriptionListenerStartEvent.hpp  SubscriptionListenerSubscriptionErrorEvent.hpp  SubscriptionListenerSubscriptionEvent.hpp  SubscriptionListenerUnsubscriptionEvent.hpp
include/lightstreamer/client/platform_data/offline/: CSOfflineStatus.hpp  OfflineStatus.hpp  OfflineStatusInterface.hpp
include/lightstreamer/client/protocol/: BatchRequest.hpp  ControlRequestHandler.hpp  ControlResponseParser.hpp  HttpRequestManager.hpp  Protocol.hpp  ProtocolConstants.hpp  ProtocolListener.hpp  RequestManager.hpp  RequestObjects.hpp  ReverseHeartbeatTimer.hpp  TextProtocol.hpp  TextProtocolHttp.hpp  TextProtocolWS.hpp  WebSocketRequestManager.hpp
include/lightstreamer/client/requests/: BindSessionRequest.hpp  ChangeSubscriptionRequest.hpp  ConstrainRequest.hpp  ControlRequest.hpp  CreateSessionRequest.hpp  DestroyRequest.hpp  ForceRebindRequest.hpp  LightstreamerRequest.hpp  MessageRequest.hpp  NumberedRequest.hpp  RecoverSessionRequest.hpp  RequestTutor.hpp  ReverseHeartbeatRequest.hpp  SessionRequest.hpp  SubscribeRequest.hpp  UnsubscribeRequest.hpp  VoidTutor.hpp
include/lightstreamer/client/session/: InternalConnectionDetails.hpp  InternalConnectionOptions.hpp  MessagesListener.hpp  OfflineCheck.hpp  RecoveryBean.hpp  RequestsHelper.hpp  RetryDelayCounter.hpp  ServerSession.hpp  Session.hpp  SessionFactory.hpp  SessionHTTP.hpp  SessionListener.hpp  SessionManager.hpp  SessionThread.hpp  SessionWS.hpp  SessionsListener.hpp  SlowingHandler.hpp  SubscriptionsListener.hpp
include/lightstreamer/client/transport/: Http.hpp  RequestHandle.hpp  RequestListener.hpp  SessionRequestListener.hpp  Transport.hpp  WebSocket.hpp
include/lightstreamer/client/transport/providers/: CookieHelper.hpp  HttpCookie.hpp  HttpProvider.hpp  TransportFactory.hpp  WebSocketProvider.hpp  WebSocketProviderFactory.hpp
include/lightstreamer/client/transport/providers/cpp/: CppWebSocketProvider.hpp
include/lightstreamer/client/transport/providers/cpp/pool/: WebSocketPoolManager.hpp
include/lightstreamer/util/: AlternativeLoader.hpp  Assertions.hpp  ConcurrentMatrix.hpp  Descriptor.hpp  EncodingUtils.hpp  GlobalProperties.hpp  GlobalRandom.hpp  HashMapHelper.hpp  IdGenerator.hpp  ListDescriptor.hpp  ListenableFuture.hpp  ListenerHolder.hpp  LsUtils.hpp  Matrix.hpp  NameDescriptor.hpp  Number.hpp  StringHelper.hpp  Visitor.hpp
include/lightstreamer/util/mdc/: Log4JMDCProvider.hpp  MDC.hpp  MDCProvider.hpp
include/lightstreamer/util/threads/: CSJoinableExecutor.hpp  CSJoinableScheduler.hpp  DefaultExecutorFactory.hpp  FuturePendingTask.hpp  JoinablePoolExecutor.hpp  PendingTask.hpp  SingleThreadMultiplexer.hpp  StaticAssignmentMultiplexer.hpp  ThreadMultiplexer.hpp  ThreadShutdownHook.hpp
include/lightstreamer/util/threads/providers/: ExecutorFactory.hpp  Joinable.hpp  JoinableExecutor.hpp  JoinableScheduler.hpp
src/: Logger.cpp
src/modules/: ClientListener.cppm  ClientMessageListener.cppm  ConnectionDetails.cppm  ConnectionOptions.cppm  ConsoleLogLevel.cppm  ConsoleLoggerProvider.cppm  ItemUpdate.cppm  LightstreamerClient.cppm  Logger.cppm  Proxy.cppm  Subscription.cppm  SubscriptionListener.cppm
src/modules/Logging/: Log.cppm  LogManager.hpp  Logger.cppm  LoggerProvider.cppm
tests/: CMakeLists.txt
tests/unit/: test_connectiondetails.cpp  test_logger.cpp  test_proxy.cpp
